# voice-assistant-proxy

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  pytest.ini
scripts/: test_streaming_proxy.py
smart_assistant_proxy/: __init__.py  app.py  config.py  realtime.py
test_data/: Concept.m4a  README.md  Zebra.m4a
tests/: __init__.py  conftest.py  test_api.py  test_integration.py
