[project]
name = "smart-assistant-proxy"
version = "0.1.0"
description = ""
authors = [
    {name = "Philipp Comans",email = "philipp.comans@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.1",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "opuslib>=3.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)"
]
